feat jmanus graph