@@ -45,233 +45,229 @@ import static org.mockito.Mockito.when;
 
 class ReactAgentTest {
 
-    @Mock
-    private ChatClient chatClient;
+	@Mock
+	private ChatClient chatClient;
 
-    @Mock
-    private ChatClient.ChatClientRequestSpec requestSpec;
+	@Mock
+	private ChatClient.ChatClientRequestSpec requestSpec;
 
-    @Mock
-    private ChatClient.CallResponseSpec responseSpec;
+	@Mock
+	private ChatClient.CallResponseSpec responseSpec;
 
-    @Mock
-    private ChatResponse chatResponse;
+	@Mock
+	private ChatResponse chatResponse;
 
-    @Mock
-    private ToolCallbackResolver toolCallbackResolver;
+	@Mock
+	private ToolCallbackResolver toolCallbackResolver;
 
-    @Mock
-    private ToolCallback toolCallback;
+	@Mock
+	private ToolCallback toolCallback;
 
-    @BeforeEach
-    void setUp() {
-        MockitoAnnotations.openMocks(this);
+	@BeforeEach
+	void setUp() {
+		MockitoAnnotations.openMocks(this);
 
-        // Configure mock ChatClient with complete call chain
-        when(chatClient.prompt()).thenReturn(requestSpec);
-        when(requestSpec.messages(anyList())).thenReturn(requestSpec);
-        when(requestSpec.advisors(anyList())).thenReturn(requestSpec);
-        when(requestSpec.toolCallbacks(anyList())).thenReturn(requestSpec);
-        when(requestSpec.call()).thenReturn(responseSpec);
+		// Configure mock ChatClient with complete call chain
+		when(chatClient.prompt()).thenReturn(requestSpec);
+		when(requestSpec.messages(anyList())).thenReturn(requestSpec);
+		when(requestSpec.advisors(anyList())).thenReturn(requestSpec);
+		when(requestSpec.toolCallbacks(anyList())).thenReturn(requestSpec);
+		when(requestSpec.call()).thenReturn(responseSpec);
 
-        // Configure mock ToolCallbackResolver
-        when(toolCallbackResolver.resolve(anyString())).thenReturn(toolCallback);
-        when(toolCallback.call(anyString(), any(ToolContext.class))).thenReturn("test tool response");
-        when(toolCallback.getToolDefinition()).thenReturn(DefaultToolDefinition.builder()
-            .name("test_function")
-            .description("A test function")
-            .inputSchema("{\"type\": \"object\", \"properties\": {\"arg1\": {\"type\": \"string\"}}}")
-            .build());
+		// Configure mock ToolCallbackResolver
+		when(toolCallbackResolver.resolve(anyString())).thenReturn(toolCallback);
+		when(toolCallback.call(anyString(), any(ToolContext.class))).thenReturn("test tool response");
+		when(toolCallback.getToolDefinition()).thenReturn(DefaultToolDefinition.builder()
+			.name("test_function")
+			.description("A test function")
+			.inputSchema("{\"type\": \"object\", \"properties\": {\"arg1\": {\"type\": \"string\"}}}")
+			.build());
 
-        // Configure mock ChatResponse with ToolCalls
-        Map<String, Object> metadata = new HashMap<>();
-        metadata.put("finishReason", "stop");
-        List<ToolCall> toolCalls = List.of(
-            new ToolCall("call_1", "function", "test_function", "{\"arg1\": \"value1\"}")
-        );
-        AssistantMessage assistantMessage = new AssistantMessage(
-            "test response",
-            metadata,
-            toolCalls,
-            Collections.emptyList()
-        );
-        ChatGenerationMetadata generationMetadata = ChatGenerationMetadata.builder()
-            .finishReason("stop")
-            .build();
-        Generation generation = new Generation(assistantMessage, generationMetadata);
-        ChatResponseMetadata responseMetadata = ChatResponseMetadata.builder()
-            .id("test-id")
-            .usage(new DefaultUsage(10, 20, 30))
-            .build();
-        ChatResponse response = ChatResponse.builder()
-            .generations(List.of(generation))
-            .metadata(responseMetadata)
-            .build();
-        when(responseSpec.chatResponse()).thenReturn(response);
-    }
+		// Configure mock ChatResponse with ToolCalls
+		Map<String, Object> metadata = new HashMap<>();
+		metadata.put("finishReason", "stop");
+		List<ToolCall> toolCalls = List
+			.of(new ToolCall("call_1", "function", "test_function", "{\"arg1\": \"value1\"}"));
+		AssistantMessage assistantMessage = new AssistantMessage("test response", metadata, toolCalls,
+				Collections.emptyList());
+		ChatGenerationMetadata generationMetadata = ChatGenerationMetadata.builder().finishReason("stop").build();
+		Generation generation = new Generation(assistantMessage, generationMetadata);
+		ChatResponseMetadata responseMetadata = ChatResponseMetadata.builder()
+			.id("test-id")
+			.usage(new DefaultUsage(10, 20, 30))
+			.build();
+		ChatResponse response = ChatResponse.builder()
+			.generations(List.of(generation))
+			.metadata(responseMetadata)
+			.build();
+		when(responseSpec.chatResponse()).thenReturn(response);
+	}
 
-    /**
-     * Tests ReactAgent with preLlmHook that modifies system prompt before LLM call.
-     */
-    @Test
-    public void testReactAgentWithPreLlmHook() throws Exception {
-        Map<String, String> prellmStore = new HashMap<>();
+	/**
+	 * Tests ReactAgent with preLlmHook that modifies system prompt before LLM call.
+	 */
+	@Test
+	public void testReactAgentWithPreLlmHook() throws Exception {
+		Map<String, String> prellmStore = new HashMap<>();
 
-        ReactAgent agent = ReactAgent.builder()
-                .name("testAgent")
-                .chatClient(chatClient)
-                .state(() -> new OverAllState().registerKeyAndStrategy("messages", new AppendStrategy()))
-                .resolver(toolCallbackResolver)
-                .preLlmHook(state -> {
-                    prellmStore.put("timestamp", String.valueOf(System.currentTimeMillis()));
-                    return Map.of();
-                })
-                .build();
+		ReactAgent agent = ReactAgent.builder()
+			.name("testAgent")
+			.chatClient(chatClient)
+			.state(() -> new OverAllState().registerKeyAndStrategy("messages", new AppendStrategy()))
+			.resolver(toolCallbackResolver)
+			.preLlmHook(state -> {
+				prellmStore.put("timestamp", String.valueOf(System.currentTimeMillis()));
+				return Map.of();
+			})
+			.build();
 
-        CompiledGraph graph = agent.getAndCompileGraph();
-        try {
-            Optional<OverAllState> invoke = graph.invoke(Map.of("messages", List.of(new UserMessage("test"))));
-        }catch (java.util.concurrent.CompletionException e){
+		CompiledGraph graph = agent.getAndCompileGraph();
+		try {
+			Optional<OverAllState> invoke = graph.invoke(Map.of("messages", List.of(new UserMessage("test"))));
+		}
+		catch (java.util.concurrent.CompletionException e) {
 
-        }
-        assertNotNull(prellmStore.get("timestamp"));
+		}
+		assertNotNull(prellmStore.get("timestamp"));
 
-    }
+	}
 
-    /**
-     * Tests ReactAgent with postLlmHook that processes LLM response.
-     */
-    @Test
-    public void testReactAgentWithPostLlmHook() throws Exception {
-        // Create a map to store processed responses
-        Map<String, String> responseStore = new HashMap<>();
+	/**
+	 * Tests ReactAgent with postLlmHook that processes LLM response.
+	 */
+	@Test
+	public void testReactAgentWithPostLlmHook() throws Exception {
+		// Create a map to store processed responses
+		Map<String, String> responseStore = new HashMap<>();
 
-        ReactAgent agent = ReactAgent.builder()
-                .name("testAgent")
-                .chatClient(chatClient)
-                .state(() -> new OverAllState().registerKeyAndStrategy("messages", new AppendStrategy()))
-                .resolver(toolCallbackResolver)
+		ReactAgent agent = ReactAgent.builder()
+			.name("testAgent")
+			.chatClient(chatClient)
+			.state(() -> new OverAllState().registerKeyAndStrategy("messages", new AppendStrategy()))
+			.resolver(toolCallbackResolver)
 
-                .postLlmHook(state -> {
-                    responseStore.put("response", "Processed: " + state.value("messages"));
-                    return Map.of();
-                })
-                .build();
+			.postLlmHook(state -> {
+				responseStore.put("response", "Processed: " + state.value("messages"));
+				return Map.of();
+			})
+			.build();
 
-        CompiledGraph graph = agent.getAndCompileGraph();
-        try {
-            Optional<OverAllState> invoke = graph.invoke(Map.of("messages", List.of(new UserMessage("test"))));
-        }catch (java.util.concurrent.CompletionException e){
+		CompiledGraph graph = agent.getAndCompileGraph();
+		try {
+			Optional<OverAllState> invoke = graph.invoke(Map.of("messages", List.of(new UserMessage("test"))));
+		}
+		catch (java.util.concurrent.CompletionException e) {
 
-        }
-        assertNotNull(responseStore.get("response"));
-    }
+		}
+		assertNotNull(responseStore.get("response"));
+	}
 
-    /**
-     * Tests ReactAgent with preToolHook that prepares tool parameters.
-     */
-    @Test
-    public void testReactAgentWithPreToolHook() throws Exception {
-        // Create a map to store tool parameters
-        Map<String, Object> toolParams = new HashMap<>();
+	/**
+	 * Tests ReactAgent with preToolHook that prepares tool parameters.
+	 */
+	@Test
+	public void testReactAgentWithPreToolHook() throws Exception {
+		// Create a map to store tool parameters
+		Map<String, Object> toolParams = new HashMap<>();
 
-        ReactAgent agent = ReactAgent.builder()
-                .name("testAgent")
-                .chatClient(chatClient)
-                .state(() -> new OverAllState()
-                        .registerKeyAndStrategy("toolParams",new ReplaceStrategy())
-                        .registerKeyAndStrategy("messages", new AppendStrategy()))
-                .resolver(toolCallbackResolver)
-                .preToolHook(state -> {
-                    toolParams.put("timestamp", System.currentTimeMillis());
-                    return Map.of();
-                })
-                .build();
+		ReactAgent agent = ReactAgent.builder()
+			.name("testAgent")
+			.chatClient(chatClient)
+			.state(() -> new OverAllState().registerKeyAndStrategy("toolParams", new ReplaceStrategy())
+				.registerKeyAndStrategy("messages", new AppendStrategy()))
+			.resolver(toolCallbackResolver)
+			.preToolHook(state -> {
+				toolParams.put("timestamp", System.currentTimeMillis());
+				return Map.of();
+			})
+			.build();
 
-        CompiledGraph graph = agent.getAndCompileGraph();
-        try {
-            Optional<OverAllState> invoke = graph.invoke(Map.of("messages", List.of(new UserMessage("test"))));
-        }catch (java.util.concurrent.CompletionException e){
+		CompiledGraph graph = agent.getAndCompileGraph();
+		try {
+			Optional<OverAllState> invoke = graph.invoke(Map.of("messages", List.of(new UserMessage("test"))));
+		}
+		catch (java.util.concurrent.CompletionException e) {
 
-        }
-        assertNotNull(toolParams.get("timestamp"));
-    }
+		}
+		assertNotNull(toolParams.get("timestamp"));
+	}
 
-    /**
-     * Tests ReactAgent with postToolHook that collects tool results.
-     */
-    @Test
-    public void testReactAgentWithPostToolHook() throws Exception {
-        // Create a map to store tool results
-        Map<String, Object> toolResults = new HashMap<>();
+	/**
+	 * Tests ReactAgent with postToolHook that collects tool results.
+	 */
+	@Test
+	public void testReactAgentWithPostToolHook() throws Exception {
+		// Create a map to store tool results
+		Map<String, Object> toolResults = new HashMap<>();
 
-        ReactAgent agent = ReactAgent.builder()
-                .name("testAgent")
-                .chatClient(chatClient)
-                .resolver(toolCallbackResolver)
-                .state(() -> new OverAllState()
-                        .registerKeyAndStrategy("messages", new AppendStrategy())
-                        .registerKeyAndStrategy("toolOutput", new ReplaceStrategy()))
-                .postToolHook(state -> {
-                    toolResults.put("result", "collected: " + "tool output");
-                    return Map.of();
-                })
-                .build();
+		ReactAgent agent = ReactAgent.builder()
+			.name("testAgent")
+			.chatClient(chatClient)
+			.resolver(toolCallbackResolver)
+			.state(() -> new OverAllState().registerKeyAndStrategy("messages", new AppendStrategy())
+				.registerKeyAndStrategy("toolOutput", new ReplaceStrategy()))
+			.postToolHook(state -> {
+				toolResults.put("result", "collected: " + "tool output");
+				return Map.of();
+			})
+			.build();
 
-        CompiledGraph graph = agent.getAndCompileGraph();
-        try {
-            Optional<OverAllState> invoke = graph.invoke(Map.of("messages", List.of(new UserMessage("test"))));
-        }catch (java.util.concurrent.CompletionException e){
+		CompiledGraph graph = agent.getAndCompileGraph();
+		try {
+			Optional<OverAllState> invoke = graph.invoke(Map.of("messages", List.of(new UserMessage("test"))));
+		}
+		catch (java.util.concurrent.CompletionException e) {
 
-        }
-        assertNotNull(toolResults.get("result"));
-    }
+		}
+		assertNotNull(toolResults.get("result"));
+	}
 
-    @Test
-    public void testReactAgentWithAllHooks() throws Exception {
-        // Create maps to store results from each hook
-        Map<String, String> prellmStore = new HashMap<>();
-        Map<String, String> responseStore = new HashMap<>();
-        Map<String, Object> toolParams = new HashMap<>();
-        Map<String, Object> toolResults = new HashMap<>();
+	@Test
+	public void testReactAgentWithAllHooks() throws Exception {
+		// Create maps to store results from each hook
+		Map<String, String> prellmStore = new HashMap<>();
+		Map<String, String> responseStore = new HashMap<>();
+		Map<String, Object> toolParams = new HashMap<>();
+		Map<String, Object> toolResults = new HashMap<>();
 
-        ReactAgent agent = ReactAgent.builder()
-                .name("testAgent")
-                .chatClient(chatClient)
-                .state(() -> new OverAllState()
-                        .registerKeyAndStrategy("messages", new AppendStrategy())
-                        .registerKeyAndStrategy("toolParams", new ReplaceStrategy())
-                        .registerKeyAndStrategy("toolOutput", new ReplaceStrategy()))
-                .resolver(toolCallbackResolver)
-                .preLlmHook(state -> {
-                    prellmStore.put("timestamp", String.valueOf(System.currentTimeMillis()));
-                    return Map.of();
-                })
-                .postLlmHook(state -> {
-                    responseStore.put("response", "Processed: " + state.value("messages"));
-                    return Map.of();
-                })
-                .preToolHook(state -> {
-                    toolParams.put("timestamp", System.currentTimeMillis());
-                    return Map.of();
-                })
-                .postToolHook(state -> {
-                    toolResults.put("result", "collected: " + "tool output");
-                    return Map.of();
-                })
-                .build();
+		ReactAgent agent = ReactAgent.builder()
+			.name("testAgent")
+			.chatClient(chatClient)
+			.state(() -> new OverAllState().registerKeyAndStrategy("messages", new AppendStrategy())
+				.registerKeyAndStrategy("toolParams", new ReplaceStrategy())
+				.registerKeyAndStrategy("toolOutput", new ReplaceStrategy()))
+			.resolver(toolCallbackResolver)
+			.preLlmHook(state -> {
+				prellmStore.put("timestamp", String.valueOf(System.currentTimeMillis()));
+				return Map.of();
+			})
+			.postLlmHook(state -> {
+				responseStore.put("response", "Processed: " + state.value("messages"));
+				return Map.of();
+			})
+			.preToolHook(state -> {
+				toolParams.put("timestamp", System.currentTimeMillis());
+				return Map.of();
+			})
+			.postToolHook(state -> {
+				toolResults.put("result", "collected: " + "tool output");
+				return Map.of();
+			})
+			.build();
 
-        CompiledGraph graph = agent.getAndCompileGraph();
-        try {
-            Optional<OverAllState> invoke = graph.invoke(Map.of("messages", List.of(new UserMessage("test"))));
-        } catch (java.util.concurrent.CompletionException e) {
-            // Ignore max iterations exception
-        }
+		CompiledGraph graph = agent.getAndCompileGraph();
+		try {
+			Optional<OverAllState> invoke = graph.invoke(Map.of("messages", List.of(new UserMessage("test"))));
+		}
+		catch (java.util.concurrent.CompletionException e) {
+			// Ignore max iterations exception
+		}
 
-        // Verify all hooks were executed
-        assertNotNull(prellmStore.get("timestamp"), "PreLLM hook should store timestamp");
-        assertNotNull(responseStore.get("response"), "PostLLM hook should store response");
-        assertNotNull(toolParams.get("timestamp"), "PreTool hook should store timestamp");
-        assertNotNull(toolResults.get("result"), "PostTool hook should store result");
-    }
+		// Verify all hooks were executed
+		assertNotNull(prellmStore.get("timestamp"), "PreLLM hook should store timestamp");
+		assertNotNull(responseStore.get("response"), "PostLLM hook should store response");
+		assertNotNull(toolParams.get("timestamp"), "PreTool hook should store timestamp");
+		assertNotNull(toolResults.get("result"), "PostTool hook should store result");
+	}
+
 }
